# aes-scripts

./: README.md
go-tools/: .gitignore  go-tools  go.mod  go.sum  readme.md  setup.sh
go-tools/cmd/devshell/: cmd_config.go  cmd_config_init.go  cmd_config_init_nodes.yml  cmd_config_init_registry.yml  cmd_config_update.go  cmd_example.go  cmd_example.yml  cmd_example_full_nodes.yml  cmd_example_full_types.yml  cmd_example_simple.yml  cmd_example_simple_nodes.yml  cmd_example_simple_types.yml  cmd_init.go  cmd_root.go  config.go  dryrun.go  executor.go  list.go  main.go  readme.md
go-tools/cmd/devshell/doc/: dsl-spec.md
go-tools/cmd/devshell/dsl/: engine.go  errors.go  expand.go  model.go  raw.go  registry.go  spec_compliance_test.go  template.go  typedef.go  validate_raw.go
go-tools/cmd/devshell/dsl/doc/: dsl-spec.md
go-tools/cmd/devshell/dslyaml/: dslyaml.go  spec_compliance_test.go
go-tools/cmd/die/: main.go
go-tools/cmd/go-tools/: build.go  clean.go  completions.go  install.go  main.go  paths.go
go-tools/cmd/hello/: main.go
go-tools/cmd/kk/: main.go
go-tools/cmd/sonar-security-exporter/: client.go  export.go  main.go  model.go  projects.go  summary.go
go-tools/cmd/tcpo/: kill.go  main.go  model.go  scanner.go
go-tools/cmd/testshell/: main.go
go-tools/pkg/lib/: exit.go
python-scripts/default-scripts/: pyproject.toml
python-scripts/default-scripts/scripts/: die.py  spring-boot-dependencies.py
