[project]
name = "default-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "aes", email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "iterfzf (>=1.8.0.62.0,<2.0.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false